--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,8 @@ tools:context=".activities.firstLayer.ActivityMain">
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
             android:text="PROFILE"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
