--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -32,7 +32,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/color_inividual"
                 android:gravity="center"
-                android:text="INDIVIDUAL"
+                android:text="SINGLE"
                 android:textColor="@color/black"
                 android:textAllCaps="true"
                 android:textStyle="bold"
@@ -55,7 +55,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/color_delivery"
                 android:gravity="center"
-                android:text="BULK"
+                android:text="GROUP"
                 android:textColor="@color/black"
                 android:textAllCaps="true"
                 android:textStyle="bold"
