--- a/app/src/main/res/layout/custom_toast_layout.xml
+++ b/app/src/main/res/layout/custom_toast_layout.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:gravity="center"
-        android:padding="14dp" />
+        android:padding="14dp"
+        android:textSize="40sp"/>
 
 </LinearLayout>
